--- a/ros_common/common_msgs/CMakeLists.txt
+++ b/ros_common/common_msgs/CMakeLists.txt
@@ -15,7 +15,7 @@ find_package(sensor_msgs REQUIRED)
 # find_package(<dependency> REQUIRED)
 
 set(msg_files
-  "msg/StringStamped.msg"
+  "msgs/StringStamped.msg"
   )
 
 rosidl_generate_interfaces(${PROJECT_NAME}
