--- a/src/exp/package.xml
+++ b/src/exp/package.xml
@@ -3,9 +3,9 @@
 <package format="3">
   <name>exp</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>experiment</description>
   <maintainer email="cgjg0289@mail4.doshisha.ac.jp">mao-y</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache License 2.0</license>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
